--- a/eval_pipeline/results.ipynb
+++ b/eval_pipeline/results.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-09T19:50:37.069196Z",
-     "start_time": "2025-02-09T19:50:36.900907Z"
+     "end_time": "2025-02-11T15:00:30.664840Z",
+     "start_time": "2025-02-11T15:00:30.436608Z"
     }
    },
    "cell_type": "code",
@@ -27,9 +27,9 @@
     "\n",
     "# Model-specific performance metrics (0.0 serves as a placeholder, later replace with actual values)\n",
     "model_performance = {\n",
-    "    'Gemma-2-9B': {'MMLU': 62.0, 'GSM8K': 65.0},\n",
-    "    'Llama-3.1-8B': {'MMLU': 59.1 , 'GSM8K': 69.9},\n",
-    "    'Phi-4-14B': {'MMLU': 76.9, 'GSM8K': 82.3}\n",
+    "    'Gemma-2-9B': {'MMLU': 71.3, 'GSM8K': 68.6, 'HumanEval': 40.2},\n",
+    "    'Llama-3.1-8B': {'MMLU': 66.7 , 'GSM8K': 84.5, 'HumanEval': 72.6},\n",
+    "    'Phi-4-14B': {'MMLU': 84.8, 'GSM8K': 89.7, 'HumanEval': 82.6}\n",
     "}\n",
     "\n",
     "# Initialize tables\n",
@@ -61,30 +61,31 @@
     "    # Process harmful benchmarks\n",
     "    for code, full_name in asr_benchmark_mapping.items():\n",
     "        try:\n",
-    "            df = pd.read_csv(f\"./evaluations/{code}-{file_suffix}-eval.csv\")\n",
+    "            df = pd.read_csv(f\"./evaluations/{code}-no-{file_suffix}-eval.csv\")\n",
     "            asr_table.loc[model, full_name] = calculate_asr(df)\n",
     "        except FileNotFoundError:\n",
-    "            print(f\"Missing file: {code}-{file_suffix}-eval.csv\")\n",
+    "            print(f\"Missing file: {code}-no-{file_suffix}-eval.csv\")\n",
     "            continue\n",
     "\n",
     "    # Process over-refusal benchmarks\n",
     "    for code, full_name in rr_benchmark_mapping.items():\n",
     "        try:\n",
-    "            df = pd.read_csv(f\"./evaluations/{code}-{file_suffix}-eval.csv\")\n",
+    "            df = pd.read_csv(f\"./evaluations/{code}-no-{file_suffix}-eval.csv\")\n",
     "            rr_table.loc[model, full_name] = calculate_rr(df)\n",
     "        except FileNotFoundError:\n",
     "            print(f\"Missing file: {code}-{file_suffix}-eval.csv\")\n",
     "            continue\n",
     "\n",
-    "    for metric in ['MMLU', 'GSM8K']:\n",
+    "    for metric in ['MMLU', 'GSM8K', 'HumanEval']:\n",
     "        asr_table.loc[model, metric] = performance[metric]\n",
     "        rr_table.loc[model, metric] = performance[metric]\n",
     "\n",
     "def format_table(df):\n",
     "    return df.style.format({\n",
-    "        **{col: \"{:.1f}%\" for col in df.columns if col not in ['MMLU', 'GSM8K']},\n",
+    "        **{col: \"{:.1f}%\" for col in df.columns if col not in ['MMLU', 'GSM8K', 'HumanEval']},\n",
     "        'MMLU': \"{:.1f}\",\n",
-    "        'GSM8K': \"{:.1f}\"\n",
+    "        'GSM8K': \"{:.1f}\",\n",
+    "        'HumanEval': \"{:.1f}\",\n",
     "    }, na_rep=\"N/A\").set_caption(\"Model Evaluation Results\").set_table_styles([\n",
     "        {'selector': 'caption',\n",
     "         'props': [('font-size', '16px'), ('font-weight', 'bold')]}\n",
@@ -108,59 +109,63 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x768c32f93460>"
+       "<pandas.io.formats.style.Styler at 0x786220097a90>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_a9315 caption {\n",
+       "#T_91a45 caption {\n",
        "  font-size: 16px;\n",
        "  font-weight: bold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_a9315\">\n",
+       "<table id=\"T_91a45\">\n",
        "  <caption>Model Evaluation Results</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_a9315_level0_col0\" class=\"col_heading level0 col0\" >AdvBench</th>\n",
-       "      <th id=\"T_a9315_level0_col1\" class=\"col_heading level0 col1\" >OR-Bench-Toxic</th>\n",
-       "      <th id=\"T_a9315_level0_col2\" class=\"col_heading level0 col2\" >XSTest-Unsafe</th>\n",
-       "      <th id=\"T_a9315_level0_col3\" class=\"col_heading level0 col3\" >Do-not-answer</th>\n",
-       "      <th id=\"T_a9315_level0_col4\" class=\"col_heading level0 col4\" >StrongREJECT</th>\n",
-       "      <th id=\"T_a9315_level0_col5\" class=\"col_heading level0 col5\" >MMLU</th>\n",
-       "      <th id=\"T_a9315_level0_col6\" class=\"col_heading level0 col6\" >GSM8K</th>\n",
+       "      <th id=\"T_91a45_level0_col0\" class=\"col_heading level0 col0\" >AdvBench</th>\n",
+       "      <th id=\"T_91a45_level0_col1\" class=\"col_heading level0 col1\" >OR-Bench-Toxic</th>\n",
+       "      <th id=\"T_91a45_level0_col2\" class=\"col_heading level0 col2\" >XSTest-Unsafe</th>\n",
+       "      <th id=\"T_91a45_level0_col3\" class=\"col_heading level0 col3\" >Do-not-answer</th>\n",
+       "      <th id=\"T_91a45_level0_col4\" class=\"col_heading level0 col4\" >StrongREJECT</th>\n",
+       "      <th id=\"T_91a45_level0_col5\" class=\"col_heading level0 col5\" >MMLU</th>\n",
+       "      <th id=\"T_91a45_level0_col6\" class=\"col_heading level0 col6\" >GSM8K</th>\n",
+       "      <th id=\"T_91a45_level0_col7\" class=\"col_heading level0 col7\" >HumanEval</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_a9315_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
-       "      <td id=\"T_a9315_row0_col0\" class=\"data row0 col0\" >1.2%</td>\n",
-       "      <td id=\"T_a9315_row0_col1\" class=\"data row0 col1\" >1.2%</td>\n",
-       "      <td id=\"T_a9315_row0_col2\" class=\"data row0 col2\" >1.5%</td>\n",
-       "      <td id=\"T_a9315_row0_col3\" class=\"data row0 col3\" >1.0%</td>\n",
-       "      <td id=\"T_a9315_row0_col4\" class=\"data row0 col4\" >0.6%</td>\n",
-       "      <td id=\"T_a9315_row0_col5\" class=\"data row0 col5\" >62.0</td>\n",
-       "      <td id=\"T_a9315_row0_col6\" class=\"data row0 col6\" >65.0</td>\n",
+       "      <th id=\"T_91a45_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
+       "      <td id=\"T_91a45_row0_col0\" class=\"data row0 col0\" >0.4%</td>\n",
+       "      <td id=\"T_91a45_row0_col1\" class=\"data row0 col1\" >0.8%</td>\n",
+       "      <td id=\"T_91a45_row0_col2\" class=\"data row0 col2\" >0.0%</td>\n",
+       "      <td id=\"T_91a45_row0_col3\" class=\"data row0 col3\" >1.1%</td>\n",
+       "      <td id=\"T_91a45_row0_col4\" class=\"data row0 col4\" >0.0%</td>\n",
+       "      <td id=\"T_91a45_row0_col5\" class=\"data row0 col5\" >71.3</td>\n",
+       "      <td id=\"T_91a45_row0_col6\" class=\"data row0 col6\" >68.6</td>\n",
+       "      <td id=\"T_91a45_row0_col7\" class=\"data row0 col7\" >40.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_a9315_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
-       "      <td id=\"T_a9315_row1_col0\" class=\"data row1 col0\" >1.2%</td>\n",
-       "      <td id=\"T_a9315_row1_col1\" class=\"data row1 col1\" >0.8%</td>\n",
-       "      <td id=\"T_a9315_row1_col2\" class=\"data row1 col2\" >0.0%</td>\n",
-       "      <td id=\"T_a9315_row1_col3\" class=\"data row1 col3\" >1.8%</td>\n",
-       "      <td id=\"T_a9315_row1_col4\" class=\"data row1 col4\" >1.6%</td>\n",
-       "      <td id=\"T_a9315_row1_col5\" class=\"data row1 col5\" >59.1</td>\n",
-       "      <td id=\"T_a9315_row1_col6\" class=\"data row1 col6\" >69.9</td>\n",
+       "      <th id=\"T_91a45_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
+       "      <td id=\"T_91a45_row1_col0\" class=\"data row1 col0\" >1.0%</td>\n",
+       "      <td id=\"T_91a45_row1_col1\" class=\"data row1 col1\" >1.1%</td>\n",
+       "      <td id=\"T_91a45_row1_col2\" class=\"data row1 col2\" >0.0%</td>\n",
+       "      <td id=\"T_91a45_row1_col3\" class=\"data row1 col3\" >1.2%</td>\n",
+       "      <td id=\"T_91a45_row1_col4\" class=\"data row1 col4\" >0.6%</td>\n",
+       "      <td id=\"T_91a45_row1_col5\" class=\"data row1 col5\" >66.7</td>\n",
+       "      <td id=\"T_91a45_row1_col6\" class=\"data row1 col6\" >84.5</td>\n",
+       "      <td id=\"T_91a45_row1_col7\" class=\"data row1 col7\" >72.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_a9315_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
-       "      <td id=\"T_a9315_row2_col0\" class=\"data row2 col0\" >3.5%</td>\n",
-       "      <td id=\"T_a9315_row2_col1\" class=\"data row2 col1\" >1.8%</td>\n",
-       "      <td id=\"T_a9315_row2_col2\" class=\"data row2 col2\" >1.5%</td>\n",
-       "      <td id=\"T_a9315_row2_col3\" class=\"data row2 col3\" >1.4%</td>\n",
-       "      <td id=\"T_a9315_row2_col4\" class=\"data row2 col4\" >4.5%</td>\n",
-       "      <td id=\"T_a9315_row2_col5\" class=\"data row2 col5\" >76.9</td>\n",
-       "      <td id=\"T_a9315_row2_col6\" class=\"data row2 col6\" >82.3</td>\n",
+       "      <th id=\"T_91a45_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
+       "      <td id=\"T_91a45_row2_col0\" class=\"data row2 col0\" >1.7%</td>\n",
+       "      <td id=\"T_91a45_row2_col1\" class=\"data row2 col1\" >2.1%</td>\n",
+       "      <td id=\"T_91a45_row2_col2\" class=\"data row2 col2\" >0.0%</td>\n",
+       "      <td id=\"T_91a45_row2_col3\" class=\"data row2 col3\" >1.8%</td>\n",
+       "      <td id=\"T_91a45_row2_col4\" class=\"data row2 col4\" >0.6%</td>\n",
+       "      <td id=\"T_91a45_row2_col5\" class=\"data row2 col5\" >84.8</td>\n",
+       "      <td id=\"T_91a45_row2_col6\" class=\"data row2 col6\" >89.7</td>\n",
+       "      <td id=\"T_91a45_row2_col7\" class=\"data row2 col7\" >82.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -180,47 +185,51 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x768c32f93460>"
+       "<pandas.io.formats.style.Styler at 0x786220097a90>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_6e530 caption {\n",
+       "#T_03c31 caption {\n",
        "  font-size: 16px;\n",
        "  font-weight: bold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_6e530\">\n",
+       "<table id=\"T_03c31\">\n",
        "  <caption>Model Evaluation Results</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_6e530_level0_col0\" class=\"col_heading level0 col0\" >OR-Bench-Hard-1K</th>\n",
-       "      <th id=\"T_6e530_level0_col1\" class=\"col_heading level0 col1\" >XSTest-Safe</th>\n",
-       "      <th id=\"T_6e530_level0_col2\" class=\"col_heading level0 col2\" >MMLU</th>\n",
-       "      <th id=\"T_6e530_level0_col3\" class=\"col_heading level0 col3\" >GSM8K</th>\n",
+       "      <th id=\"T_03c31_level0_col0\" class=\"col_heading level0 col0\" >OR-Bench-Hard-1K</th>\n",
+       "      <th id=\"T_03c31_level0_col1\" class=\"col_heading level0 col1\" >XSTest-Safe</th>\n",
+       "      <th id=\"T_03c31_level0_col2\" class=\"col_heading level0 col2\" >MMLU</th>\n",
+       "      <th id=\"T_03c31_level0_col3\" class=\"col_heading level0 col3\" >GSM8K</th>\n",
+       "      <th id=\"T_03c31_level0_col4\" class=\"col_heading level0 col4\" >HumanEval</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_6e530_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
-       "      <td id=\"T_6e530_row0_col0\" class=\"data row0 col0\" >85.2%</td>\n",
-       "      <td id=\"T_6e530_row0_col1\" class=\"data row0 col1\" >29.2%</td>\n",
-       "      <td id=\"T_6e530_row0_col2\" class=\"data row0 col2\" >62.0</td>\n",
-       "      <td id=\"T_6e530_row0_col3\" class=\"data row0 col3\" >65.0</td>\n",
+       "      <th id=\"T_03c31_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
+       "      <td id=\"T_03c31_row0_col0\" class=\"data row0 col0\" >0.0%</td>\n",
+       "      <td id=\"T_03c31_row0_col1\" class=\"data row0 col1\" >2.0%</td>\n",
+       "      <td id=\"T_03c31_row0_col2\" class=\"data row0 col2\" >71.3</td>\n",
+       "      <td id=\"T_03c31_row0_col3\" class=\"data row0 col3\" >68.6</td>\n",
+       "      <td id=\"T_03c31_row0_col4\" class=\"data row0 col4\" >40.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6e530_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
-       "      <td id=\"T_6e530_row1_col0\" class=\"data row1 col0\" >61.0%</td>\n",
-       "      <td id=\"T_6e530_row1_col1\" class=\"data row1 col1\" >76.8%</td>\n",
-       "      <td id=\"T_6e530_row1_col2\" class=\"data row1 col2\" >59.1</td>\n",
-       "      <td id=\"T_6e530_row1_col3\" class=\"data row1 col3\" >69.9</td>\n",
+       "      <th id=\"T_03c31_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
+       "      <td id=\"T_03c31_row1_col0\" class=\"data row1 col0\" >0.0%</td>\n",
+       "      <td id=\"T_03c31_row1_col1\" class=\"data row1 col1\" >0.0%</td>\n",
+       "      <td id=\"T_03c31_row1_col2\" class=\"data row1 col2\" >66.7</td>\n",
+       "      <td id=\"T_03c31_row1_col3\" class=\"data row1 col3\" >84.5</td>\n",
+       "      <td id=\"T_03c31_row1_col4\" class=\"data row1 col4\" >72.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6e530_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
-       "      <td id=\"T_6e530_row2_col0\" class=\"data row2 col0\" >49.8%</td>\n",
-       "      <td id=\"T_6e530_row2_col1\" class=\"data row2 col1\" >12.8%</td>\n",
-       "      <td id=\"T_6e530_row2_col2\" class=\"data row2 col2\" >76.9</td>\n",
-       "      <td id=\"T_6e530_row2_col3\" class=\"data row2 col3\" >82.3</td>\n",
+       "      <th id=\"T_03c31_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
+       "      <td id=\"T_03c31_row2_col0\" class=\"data row2 col0\" >0.0%</td>\n",
+       "      <td id=\"T_03c31_row2_col1\" class=\"data row2 col1\" >0.0%</td>\n",
+       "      <td id=\"T_03c31_row2_col2\" class=\"data row2 col2\" >84.8</td>\n",
+       "      <td id=\"T_03c31_row2_col3\" class=\"data row2 col3\" >89.7</td>\n",
+       "      <td id=\"T_03c31_row2_col4\" class=\"data row2 col4\" >82.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -230,7 +239,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 4
+   "execution_count": 29
   }
  ],
  "metadata": {
