Work in progress: smoothllm

--- a/eval_pipeline/results.ipynb
+++ b/eval_pipeline/results.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-11T15:00:30.664840Z",
-     "start_time": "2025-02-11T15:00:30.436608Z"
+     "end_time": "2025-02-12T13:45:04.957520Z",
+     "start_time": "2025-02-12T13:45:04.791955Z"
     }
    },
    "cell_type": "code",
@@ -103,69 +103,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Missing file: obh-gemma2-9b-eval.csv\n",
+      "Missing file: xss-gemma2-9b-eval.csv\n",
+      "Missing file: obh-llama31-8b-eval.csv\n",
+      "Missing file: xss-llama31-8b-eval.csv\n",
+      "Missing file: obh-phi-4-14b-eval.csv\n",
+      "Missing file: xss-phi-4-14b-eval.csv\n",
       "Attack Success Rate Table (ASR):\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x786220097a90>"
+       "<pandas.io.formats.style.Styler at 0x7862451db700>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_91a45 caption {\n",
+       "#T_a439e caption {\n",
        "  font-size: 16px;\n",
        "  font-weight: bold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_91a45\">\n",
+       "<table id=\"T_a439e\">\n",
        "  <caption>Model Evaluation Results</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_91a45_level0_col0\" class=\"col_heading level0 col0\" >AdvBench</th>\n",
-       "      <th id=\"T_91a45_level0_col1\" class=\"col_heading level0 col1\" >OR-Bench-Toxic</th>\n",
-       "      <th id=\"T_91a45_level0_col2\" class=\"col_heading level0 col2\" >XSTest-Unsafe</th>\n",
-       "      <th id=\"T_91a45_level0_col3\" class=\"col_heading level0 col3\" >Do-not-answer</th>\n",
-       "      <th id=\"T_91a45_level0_col4\" class=\"col_heading level0 col4\" >StrongREJECT</th>\n",
-       "      <th id=\"T_91a45_level0_col5\" class=\"col_heading level0 col5\" >MMLU</th>\n",
-       "      <th id=\"T_91a45_level0_col6\" class=\"col_heading level0 col6\" >GSM8K</th>\n",
-       "      <th id=\"T_91a45_level0_col7\" class=\"col_heading level0 col7\" >HumanEval</th>\n",
+       "      <th id=\"T_a439e_level0_col0\" class=\"col_heading level0 col0\" >AdvBench</th>\n",
+       "      <th id=\"T_a439e_level0_col1\" class=\"col_heading level0 col1\" >OR-Bench-Toxic</th>\n",
+       "      <th id=\"T_a439e_level0_col2\" class=\"col_heading level0 col2\" >XSTest-Unsafe</th>\n",
+       "      <th id=\"T_a439e_level0_col3\" class=\"col_heading level0 col3\" >Do-not-answer</th>\n",
+       "      <th id=\"T_a439e_level0_col4\" class=\"col_heading level0 col4\" >StrongREJECT</th>\n",
+       "      <th id=\"T_a439e_level0_col5\" class=\"col_heading level0 col5\" >MMLU</th>\n",
+       "      <th id=\"T_a439e_level0_col6\" class=\"col_heading level0 col6\" >GSM8K</th>\n",
+       "      <th id=\"T_a439e_level0_col7\" class=\"col_heading level0 col7\" >HumanEval</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_91a45_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
-       "      <td id=\"T_91a45_row0_col0\" class=\"data row0 col0\" >0.4%</td>\n",
-       "      <td id=\"T_91a45_row0_col1\" class=\"data row0 col1\" >0.8%</td>\n",
-       "      <td id=\"T_91a45_row0_col2\" class=\"data row0 col2\" >0.0%</td>\n",
-       "      <td id=\"T_91a45_row0_col3\" class=\"data row0 col3\" >1.1%</td>\n",
-       "      <td id=\"T_91a45_row0_col4\" class=\"data row0 col4\" >0.0%</td>\n",
-       "      <td id=\"T_91a45_row0_col5\" class=\"data row0 col5\" >71.3</td>\n",
-       "      <td id=\"T_91a45_row0_col6\" class=\"data row0 col6\" >68.6</td>\n",
-       "      <td id=\"T_91a45_row0_col7\" class=\"data row0 col7\" >40.2</td>\n",
+       "      <th id=\"T_a439e_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
+       "      <td id=\"T_a439e_row0_col0\" class=\"data row0 col0\" >0.4%</td>\n",
+       "      <td id=\"T_a439e_row0_col1\" class=\"data row0 col1\" >0.2%</td>\n",
+       "      <td id=\"T_a439e_row0_col2\" class=\"data row0 col2\" >0.0%</td>\n",
+       "      <td id=\"T_a439e_row0_col3\" class=\"data row0 col3\" >1.1%</td>\n",
+       "      <td id=\"T_a439e_row0_col4\" class=\"data row0 col4\" >0.0%</td>\n",
+       "      <td id=\"T_a439e_row0_col5\" class=\"data row0 col5\" >71.3</td>\n",
+       "      <td id=\"T_a439e_row0_col6\" class=\"data row0 col6\" >68.6</td>\n",
+       "      <td id=\"T_a439e_row0_col7\" class=\"data row0 col7\" >40.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_91a45_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
-       "      <td id=\"T_91a45_row1_col0\" class=\"data row1 col0\" >1.0%</td>\n",
-       "      <td id=\"T_91a45_row1_col1\" class=\"data row1 col1\" >1.1%</td>\n",
-       "      <td id=\"T_91a45_row1_col2\" class=\"data row1 col2\" >0.0%</td>\n",
-       "      <td id=\"T_91a45_row1_col3\" class=\"data row1 col3\" >1.2%</td>\n",
-       "      <td id=\"T_91a45_row1_col4\" class=\"data row1 col4\" >0.6%</td>\n",
-       "      <td id=\"T_91a45_row1_col5\" class=\"data row1 col5\" >66.7</td>\n",
-       "      <td id=\"T_91a45_row1_col6\" class=\"data row1 col6\" >84.5</td>\n",
-       "      <td id=\"T_91a45_row1_col7\" class=\"data row1 col7\" >72.6</td>\n",
+       "      <th id=\"T_a439e_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
+       "      <td id=\"T_a439e_row1_col0\" class=\"data row1 col0\" >1.0%</td>\n",
+       "      <td id=\"T_a439e_row1_col1\" class=\"data row1 col1\" >0.6%</td>\n",
+       "      <td id=\"T_a439e_row1_col2\" class=\"data row1 col2\" >0.0%</td>\n",
+       "      <td id=\"T_a439e_row1_col3\" class=\"data row1 col3\" >1.2%</td>\n",
+       "      <td id=\"T_a439e_row1_col4\" class=\"data row1 col4\" >0.6%</td>\n",
+       "      <td id=\"T_a439e_row1_col5\" class=\"data row1 col5\" >66.7</td>\n",
+       "      <td id=\"T_a439e_row1_col6\" class=\"data row1 col6\" >84.5</td>\n",
+       "      <td id=\"T_a439e_row1_col7\" class=\"data row1 col7\" >72.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_91a45_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
-       "      <td id=\"T_91a45_row2_col0\" class=\"data row2 col0\" >1.7%</td>\n",
-       "      <td id=\"T_91a45_row2_col1\" class=\"data row2 col1\" >2.1%</td>\n",
-       "      <td id=\"T_91a45_row2_col2\" class=\"data row2 col2\" >0.0%</td>\n",
-       "      <td id=\"T_91a45_row2_col3\" class=\"data row2 col3\" >1.8%</td>\n",
-       "      <td id=\"T_91a45_row2_col4\" class=\"data row2 col4\" >0.6%</td>\n",
-       "      <td id=\"T_91a45_row2_col5\" class=\"data row2 col5\" >84.8</td>\n",
-       "      <td id=\"T_91a45_row2_col6\" class=\"data row2 col6\" >89.7</td>\n",
-       "      <td id=\"T_91a45_row2_col7\" class=\"data row2 col7\" >82.6</td>\n",
+       "      <th id=\"T_a439e_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
+       "      <td id=\"T_a439e_row2_col0\" class=\"data row2 col0\" >1.7%</td>\n",
+       "      <td id=\"T_a439e_row2_col1\" class=\"data row2 col1\" >1.2%</td>\n",
+       "      <td id=\"T_a439e_row2_col2\" class=\"data row2 col2\" >0.0%</td>\n",
+       "      <td id=\"T_a439e_row2_col3\" class=\"data row2 col3\" >1.8%</td>\n",
+       "      <td id=\"T_a439e_row2_col4\" class=\"data row2 col4\" >0.6%</td>\n",
+       "      <td id=\"T_a439e_row2_col5\" class=\"data row2 col5\" >84.8</td>\n",
+       "      <td id=\"T_a439e_row2_col6\" class=\"data row2 col6\" >89.7</td>\n",
+       "      <td id=\"T_a439e_row2_col7\" class=\"data row2 col7\" >82.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -185,51 +191,51 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x786220097a90>"
+       "<pandas.io.formats.style.Styler at 0x7862451db700>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_03c31 caption {\n",
+       "#T_b3b15 caption {\n",
        "  font-size: 16px;\n",
        "  font-weight: bold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_03c31\">\n",
+       "<table id=\"T_b3b15\">\n",
        "  <caption>Model Evaluation Results</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_03c31_level0_col0\" class=\"col_heading level0 col0\" >OR-Bench-Hard-1K</th>\n",
-       "      <th id=\"T_03c31_level0_col1\" class=\"col_heading level0 col1\" >XSTest-Safe</th>\n",
-       "      <th id=\"T_03c31_level0_col2\" class=\"col_heading level0 col2\" >MMLU</th>\n",
-       "      <th id=\"T_03c31_level0_col3\" class=\"col_heading level0 col3\" >GSM8K</th>\n",
-       "      <th id=\"T_03c31_level0_col4\" class=\"col_heading level0 col4\" >HumanEval</th>\n",
+       "      <th id=\"T_b3b15_level0_col0\" class=\"col_heading level0 col0\" >OR-Bench-Hard-1K</th>\n",
+       "      <th id=\"T_b3b15_level0_col1\" class=\"col_heading level0 col1\" >XSTest-Safe</th>\n",
+       "      <th id=\"T_b3b15_level0_col2\" class=\"col_heading level0 col2\" >MMLU</th>\n",
+       "      <th id=\"T_b3b15_level0_col3\" class=\"col_heading level0 col3\" >GSM8K</th>\n",
+       "      <th id=\"T_b3b15_level0_col4\" class=\"col_heading level0 col4\" >HumanEval</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_03c31_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
-       "      <td id=\"T_03c31_row0_col0\" class=\"data row0 col0\" >0.0%</td>\n",
-       "      <td id=\"T_03c31_row0_col1\" class=\"data row0 col1\" >2.0%</td>\n",
-       "      <td id=\"T_03c31_row0_col2\" class=\"data row0 col2\" >71.3</td>\n",
-       "      <td id=\"T_03c31_row0_col3\" class=\"data row0 col3\" >68.6</td>\n",
-       "      <td id=\"T_03c31_row0_col4\" class=\"data row0 col4\" >40.2</td>\n",
+       "      <th id=\"T_b3b15_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
+       "      <td id=\"T_b3b15_row0_col0\" class=\"data row0 col0\" >N/A</td>\n",
+       "      <td id=\"T_b3b15_row0_col1\" class=\"data row0 col1\" >N/A</td>\n",
+       "      <td id=\"T_b3b15_row0_col2\" class=\"data row0 col2\" >71.3</td>\n",
+       "      <td id=\"T_b3b15_row0_col3\" class=\"data row0 col3\" >68.6</td>\n",
+       "      <td id=\"T_b3b15_row0_col4\" class=\"data row0 col4\" >40.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_03c31_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
-       "      <td id=\"T_03c31_row1_col0\" class=\"data row1 col0\" >0.0%</td>\n",
-       "      <td id=\"T_03c31_row1_col1\" class=\"data row1 col1\" >0.0%</td>\n",
-       "      <td id=\"T_03c31_row1_col2\" class=\"data row1 col2\" >66.7</td>\n",
-       "      <td id=\"T_03c31_row1_col3\" class=\"data row1 col3\" >84.5</td>\n",
-       "      <td id=\"T_03c31_row1_col4\" class=\"data row1 col4\" >72.6</td>\n",
+       "      <th id=\"T_b3b15_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
+       "      <td id=\"T_b3b15_row1_col0\" class=\"data row1 col0\" >N/A</td>\n",
+       "      <td id=\"T_b3b15_row1_col1\" class=\"data row1 col1\" >N/A</td>\n",
+       "      <td id=\"T_b3b15_row1_col2\" class=\"data row1 col2\" >66.7</td>\n",
+       "      <td id=\"T_b3b15_row1_col3\" class=\"data row1 col3\" >84.5</td>\n",
+       "      <td id=\"T_b3b15_row1_col4\" class=\"data row1 col4\" >72.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_03c31_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
-       "      <td id=\"T_03c31_row2_col0\" class=\"data row2 col0\" >0.0%</td>\n",
-       "      <td id=\"T_03c31_row2_col1\" class=\"data row2 col1\" >0.0%</td>\n",
-       "      <td id=\"T_03c31_row2_col2\" class=\"data row2 col2\" >84.8</td>\n",
-       "      <td id=\"T_03c31_row2_col3\" class=\"data row2 col3\" >89.7</td>\n",
-       "      <td id=\"T_03c31_row2_col4\" class=\"data row2 col4\" >82.6</td>\n",
+       "      <th id=\"T_b3b15_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
+       "      <td id=\"T_b3b15_row2_col0\" class=\"data row2 col0\" >N/A</td>\n",
+       "      <td id=\"T_b3b15_row2_col1\" class=\"data row2 col1\" >N/A</td>\n",
+       "      <td id=\"T_b3b15_row2_col2\" class=\"data row2 col2\" >84.8</td>\n",
+       "      <td id=\"T_b3b15_row2_col3\" class=\"data row2 col3\" >89.7</td>\n",
+       "      <td id=\"T_b3b15_row2_col4\" class=\"data row2 col4\" >82.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -239,7 +245,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 29
+   "execution_count": 46
   }
  ],
  "metadata": {
