--- a/eval_pipeline/results_sw.ipynb
+++ b/eval_pipeline/results_sw.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T16:43:15.098516Z",
-     "start_time": "2025-05-11T16:43:13.935171Z"
+     "end_time": "2025-05-17T18:18:59.780531Z",
+     "start_time": "2025-05-17T18:18:59.100971Z"
     }
    },
    "cell_type": "code",
@@ -24,7 +24,7 @@
     "    'swp': 'SensWord-Prefix',\n",
     "    'sws': 'SensWord-Suffix',\n",
     "    'swh': 'SensWord-Harmful',\n",
-    "    'swb': 'SensWord-Benign'\n",
+    "    'swb': 'SensWord-Benign',\n",
     "}\n",
     "\n",
     "# Defense types to evaluate\n",
@@ -84,47 +84,47 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x74af82336fe0>"
+       "<pandas.io.formats.style.Styler at 0x76a117d2a3b0>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_21733 caption {\n",
+       "#T_5ab4c caption {\n",
        "  font-size: 14px;\n",
        "  font-weight: bold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_21733\">\n",
+       "<table id=\"T_5ab4c\">\n",
        "  <caption>Refusal Rate - No Defense</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_21733_level0_col0\" class=\"col_heading level0 col0\" >SensWord-Prefix</th>\n",
-       "      <th id=\"T_21733_level0_col1\" class=\"col_heading level0 col1\" >SensWord-Suffix</th>\n",
-       "      <th id=\"T_21733_level0_col2\" class=\"col_heading level0 col2\" >SensWord-Harmful</th>\n",
-       "      <th id=\"T_21733_level0_col3\" class=\"col_heading level0 col3\" >SensWord-Benign</th>\n",
+       "      <th id=\"T_5ab4c_level0_col0\" class=\"col_heading level0 col0\" >SensWord-Prefix</th>\n",
+       "      <th id=\"T_5ab4c_level0_col1\" class=\"col_heading level0 col1\" >SensWord-Suffix</th>\n",
+       "      <th id=\"T_5ab4c_level0_col2\" class=\"col_heading level0 col2\" >SensWord-Harmful</th>\n",
+       "      <th id=\"T_5ab4c_level0_col3\" class=\"col_heading level0 col3\" >SensWord-Benign</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_21733_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
-       "      <td id=\"T_21733_row0_col0\" class=\"data row0 col0\" >4.0%</td>\n",
-       "      <td id=\"T_21733_row0_col1\" class=\"data row0 col1\" >1.6%</td>\n",
-       "      <td id=\"T_21733_row0_col2\" class=\"data row0 col2\" >99.8%</td>\n",
-       "      <td id=\"T_21733_row0_col3\" class=\"data row0 col3\" >3.6%</td>\n",
+       "      <th id=\"T_5ab4c_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
+       "      <td id=\"T_5ab4c_row0_col0\" class=\"data row0 col0\" >4.0%</td>\n",
+       "      <td id=\"T_5ab4c_row0_col1\" class=\"data row0 col1\" >1.6%</td>\n",
+       "      <td id=\"T_5ab4c_row0_col2\" class=\"data row0 col2\" >99.8%</td>\n",
+       "      <td id=\"T_5ab4c_row0_col3\" class=\"data row0 col3\" >3.6%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_21733_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
-       "      <td id=\"T_21733_row1_col0\" class=\"data row1 col0\" >2.8%</td>\n",
-       "      <td id=\"T_21733_row1_col1\" class=\"data row1 col1\" >1.2%</td>\n",
-       "      <td id=\"T_21733_row1_col2\" class=\"data row1 col2\" >99.2%</td>\n",
-       "      <td id=\"T_21733_row1_col3\" class=\"data row1 col3\" >1.7%</td>\n",
+       "      <th id=\"T_5ab4c_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
+       "      <td id=\"T_5ab4c_row1_col0\" class=\"data row1 col0\" >2.8%</td>\n",
+       "      <td id=\"T_5ab4c_row1_col1\" class=\"data row1 col1\" >1.2%</td>\n",
+       "      <td id=\"T_5ab4c_row1_col2\" class=\"data row1 col2\" >99.9%</td>\n",
+       "      <td id=\"T_5ab4c_row1_col3\" class=\"data row1 col3\" >1.7%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_21733_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
-       "      <td id=\"T_21733_row2_col0\" class=\"data row2 col0\" >0.5%</td>\n",
-       "      <td id=\"T_21733_row2_col1\" class=\"data row2 col1\" >0.5%</td>\n",
-       "      <td id=\"T_21733_row2_col2\" class=\"data row2 col2\" >92.1%</td>\n",
-       "      <td id=\"T_21733_row2_col3\" class=\"data row2 col3\" >0.5%</td>\n",
+       "      <th id=\"T_5ab4c_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
+       "      <td id=\"T_5ab4c_row2_col0\" class=\"data row2 col0\" >0.5%</td>\n",
+       "      <td id=\"T_5ab4c_row2_col1\" class=\"data row2 col1\" >0.5%</td>\n",
+       "      <td id=\"T_5ab4c_row2_col2\" class=\"data row2 col2\" >98.9%</td>\n",
+       "      <td id=\"T_5ab4c_row2_col3\" class=\"data row2 col3\" >0.5%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -144,47 +144,47 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x74af82337ca0>"
+       "<pandas.io.formats.style.Styler at 0x76a117c22500>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_d8297 caption {\n",
+       "#T_721a7 caption {\n",
        "  font-size: 14px;\n",
        "  font-weight: bold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_d8297\">\n",
+       "<table id=\"T_721a7\">\n",
        "  <caption>Refusal Rate - In-Context Defense</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_d8297_level0_col0\" class=\"col_heading level0 col0\" >SensWord-Prefix</th>\n",
-       "      <th id=\"T_d8297_level0_col1\" class=\"col_heading level0 col1\" >SensWord-Suffix</th>\n",
-       "      <th id=\"T_d8297_level0_col2\" class=\"col_heading level0 col2\" >SensWord-Harmful</th>\n",
-       "      <th id=\"T_d8297_level0_col3\" class=\"col_heading level0 col3\" >SensWord-Benign</th>\n",
+       "      <th id=\"T_721a7_level0_col0\" class=\"col_heading level0 col0\" >SensWord-Prefix</th>\n",
+       "      <th id=\"T_721a7_level0_col1\" class=\"col_heading level0 col1\" >SensWord-Suffix</th>\n",
+       "      <th id=\"T_721a7_level0_col2\" class=\"col_heading level0 col2\" >SensWord-Harmful</th>\n",
+       "      <th id=\"T_721a7_level0_col3\" class=\"col_heading level0 col3\" >SensWord-Benign</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_d8297_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
-       "      <td id=\"T_d8297_row0_col0\" class=\"data row0 col0\" >4.6%</td>\n",
-       "      <td id=\"T_d8297_row0_col1\" class=\"data row0 col1\" >1.8%</td>\n",
-       "      <td id=\"T_d8297_row0_col2\" class=\"data row0 col2\" >99.0%</td>\n",
-       "      <td id=\"T_d8297_row0_col3\" class=\"data row0 col3\" >3.8%</td>\n",
+       "      <th id=\"T_721a7_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
+       "      <td id=\"T_721a7_row0_col0\" class=\"data row0 col0\" >4.6%</td>\n",
+       "      <td id=\"T_721a7_row0_col1\" class=\"data row0 col1\" >1.8%</td>\n",
+       "      <td id=\"T_721a7_row0_col2\" class=\"data row0 col2\" >99.8%</td>\n",
+       "      <td id=\"T_721a7_row0_col3\" class=\"data row0 col3\" >3.8%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d8297_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
-       "      <td id=\"T_d8297_row1_col0\" class=\"data row1 col0\" >2.9%</td>\n",
-       "      <td id=\"T_d8297_row1_col1\" class=\"data row1 col1\" >1.3%</td>\n",
-       "      <td id=\"T_d8297_row1_col2\" class=\"data row1 col2\" >100.0%</td>\n",
-       "      <td id=\"T_d8297_row1_col3\" class=\"data row1 col3\" >1.7%</td>\n",
+       "      <th id=\"T_721a7_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
+       "      <td id=\"T_721a7_row1_col0\" class=\"data row1 col0\" >2.9%</td>\n",
+       "      <td id=\"T_721a7_row1_col1\" class=\"data row1 col1\" >1.3%</td>\n",
+       "      <td id=\"T_721a7_row1_col2\" class=\"data row1 col2\" >100.0%</td>\n",
+       "      <td id=\"T_721a7_row1_col3\" class=\"data row1 col3\" >1.7%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d8297_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
-       "      <td id=\"T_d8297_row2_col0\" class=\"data row2 col0\" >0.5%</td>\n",
-       "      <td id=\"T_d8297_row2_col1\" class=\"data row2 col1\" >0.6%</td>\n",
-       "      <td id=\"T_d8297_row2_col2\" class=\"data row2 col2\" >92.2%</td>\n",
-       "      <td id=\"T_d8297_row2_col3\" class=\"data row2 col3\" >0.3%</td>\n",
+       "      <th id=\"T_721a7_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
+       "      <td id=\"T_721a7_row2_col0\" class=\"data row2 col0\" >1.0%</td>\n",
+       "      <td id=\"T_721a7_row2_col1\" class=\"data row2 col1\" >0.6%</td>\n",
+       "      <td id=\"T_721a7_row2_col2\" class=\"data row2 col2\" >99.1%</td>\n",
+       "      <td id=\"T_721a7_row2_col3\" class=\"data row2 col3\" >0.5%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -204,47 +204,47 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x74af823eeda0>"
+       "<pandas.io.formats.style.Styler at 0x76a117fcfe20>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_967c9 caption {\n",
+       "#T_1f259 caption {\n",
        "  font-size: 14px;\n",
        "  font-weight: bold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_967c9\">\n",
+       "<table id=\"T_1f259\">\n",
        "  <caption>Refusal Rate - Self-Reminder Defense</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_967c9_level0_col0\" class=\"col_heading level0 col0\" >SensWord-Prefix</th>\n",
-       "      <th id=\"T_967c9_level0_col1\" class=\"col_heading level0 col1\" >SensWord-Suffix</th>\n",
-       "      <th id=\"T_967c9_level0_col2\" class=\"col_heading level0 col2\" >SensWord-Harmful</th>\n",
-       "      <th id=\"T_967c9_level0_col3\" class=\"col_heading level0 col3\" >SensWord-Benign</th>\n",
+       "      <th id=\"T_1f259_level0_col0\" class=\"col_heading level0 col0\" >SensWord-Prefix</th>\n",
+       "      <th id=\"T_1f259_level0_col1\" class=\"col_heading level0 col1\" >SensWord-Suffix</th>\n",
+       "      <th id=\"T_1f259_level0_col2\" class=\"col_heading level0 col2\" >SensWord-Harmful</th>\n",
+       "      <th id=\"T_1f259_level0_col3\" class=\"col_heading level0 col3\" >SensWord-Benign</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_967c9_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
-       "      <td id=\"T_967c9_row0_col0\" class=\"data row0 col0\" >4.4%</td>\n",
-       "      <td id=\"T_967c9_row0_col1\" class=\"data row0 col1\" >1.8%</td>\n",
-       "      <td id=\"T_967c9_row0_col2\" class=\"data row0 col2\" >99.9%</td>\n",
-       "      <td id=\"T_967c9_row0_col3\" class=\"data row0 col3\" >3.8%</td>\n",
+       "      <th id=\"T_1f259_level0_row0\" class=\"row_heading level0 row0\" >Gemma-2-9B</th>\n",
+       "      <td id=\"T_1f259_row0_col0\" class=\"data row0 col0\" >4.4%</td>\n",
+       "      <td id=\"T_1f259_row0_col1\" class=\"data row0 col1\" >1.8%</td>\n",
+       "      <td id=\"T_1f259_row0_col2\" class=\"data row0 col2\" >99.9%</td>\n",
+       "      <td id=\"T_1f259_row0_col3\" class=\"data row0 col3\" >3.8%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_967c9_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
-       "      <td id=\"T_967c9_row1_col0\" class=\"data row1 col0\" >2.9%</td>\n",
-       "      <td id=\"T_967c9_row1_col1\" class=\"data row1 col1\" >1.3%</td>\n",
-       "      <td id=\"T_967c9_row1_col2\" class=\"data row1 col2\" >100.0%</td>\n",
-       "      <td id=\"T_967c9_row1_col3\" class=\"data row1 col3\" >1.7%</td>\n",
+       "      <th id=\"T_1f259_level0_row1\" class=\"row_heading level0 row1\" >Llama-3.1-8B</th>\n",
+       "      <td id=\"T_1f259_row1_col0\" class=\"data row1 col0\" >2.9%</td>\n",
+       "      <td id=\"T_1f259_row1_col1\" class=\"data row1 col1\" >1.3%</td>\n",
+       "      <td id=\"T_1f259_row1_col2\" class=\"data row1 col2\" >100.0%</td>\n",
+       "      <td id=\"T_1f259_row1_col3\" class=\"data row1 col3\" >1.7%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_967c9_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
-       "      <td id=\"T_967c9_row2_col0\" class=\"data row2 col0\" >0.4%</td>\n",
-       "      <td id=\"T_967c9_row2_col1\" class=\"data row2 col1\" >0.4%</td>\n",
-       "      <td id=\"T_967c9_row2_col2\" class=\"data row2 col2\" >92.0%</td>\n",
-       "      <td id=\"T_967c9_row2_col3\" class=\"data row2 col3\" >0.4%</td>\n",
+       "      <th id=\"T_1f259_level0_row2\" class=\"row_heading level0 row2\" >Phi-4-14B</th>\n",
+       "      <td id=\"T_1f259_row2_col0\" class=\"data row2 col0\" >1.1%</td>\n",
+       "      <td id=\"T_1f259_row2_col1\" class=\"data row2 col1\" >0.5%</td>\n",
+       "      <td id=\"T_1f259_row2_col2\" class=\"data row2 col2\" >99.2%</td>\n",
+       "      <td id=\"T_1f259_row2_col3\" class=\"data row2 col3\" >0.5%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -254,7 +254,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 21
+   "execution_count": 8
   }
  ],
  "metadata": {
